# negotiator-rs

./: Cargo.toml  Changelog.md  LICENSE
src/: charsets.rs  lib.rs
tests/: charsets.rs
