[package]
name = "negotiator"
version = "0.1.0"
authors = ["Jeremiah Senkpiel <fishrock123@rocketmail.com>"]
edition = "2018"
license = "MIT"
description = "An HTTP content negotiator for http-rs."
readme = "README.md"
repository = "https://github.com/Fishrock123/negotiator-rs"
keywords = ["http", "http-types", "accept", "negotiation"]
categories = [
  "web-programming::http-server"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-types = "2.0"
regex = "1.3"

